@@ -3,17 +3,13 @@
  * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.scripts;
 
-import java.io.BufferedReader;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.control.DefaultUserInterfaceControl;
 import de.uka.ilkd.key.control.KeYEnvironment;
@@ -21,94 +17,100 @@ import de.uka.ilkd.key.nparser.ParsingFacade;
 import de.uka.ilkd.key.proof.Goal;
 import de.uka.ilkd.key.proof.Proof;
 import de.uka.ilkd.key.smt.newsmt2.MasterHandlerTest;
-import de.uka.ilkd.key.util.LineProperties;
 
 import org.key_project.util.collection.ImmutableList;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-
 
 /**
  * see {@link MasterHandlerTest} from where I copied quite a bit.
  */
 public class TestProofScriptCommand {
+    public record TestInstance(
+            String name,
+            String key, String script, @Nullable String exception,
+            String[] goals, Integer selectedGoal) {
+    }
+
     public static List<Arguments> data() throws IOException, URISyntaxException {
-        URL url = TestProofScriptCommand.class.getResource("cases");
-        if (url == null) {
-            throw new FileNotFoundException("Cannot find resource 'cases'.");
-        }
+        var folder = Paths.get("src/test/resources/de/uka/ilkd/key/scripts/cases")
+                .toAbsolutePath();
+        try (var walker = Files.walk(folder)) {
+            List<Path> files =
+                walker.filter(it -> it.getFileName().toString().endsWith(".yml")).toList();
+            var objectMapper = new ObjectMapper(new YAMLFactory());
+            objectMapper.findAndRegisterModules();
 
-        if (!url.getProtocol().equals("file")) {
-            throw new IOException("Resource should be a file URL not " + url);
-        }
-
-        Path directory = Paths.get(url.toURI());
-        assertTrue(Files.isDirectory(directory));
-        try (var s = Files.list(directory)) {
-            return s.map(f -> Arguments.of(f.getFileName().toString(), f))
-                    .collect(Collectors.toList());
+            List<Arguments> args = new ArrayList<>(files.size());
+            for (Path path : files) {
+                try {
+                    TestInstance instance =
+                        objectMapper.readValue(path.toFile(), TestInstance.class);
+                    args.add(Arguments.of(instance));
+                } catch (Exception e) {
+                    System.out.println(path);
+                    e.printStackTrace();
+                    throw e;
+                }
+            }
+            return args;
         }
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    void testProofScript(String name, Path path) throws Exception {
-
-        BufferedReader reader = Files.newBufferedReader(path);
-        LineProperties props = new LineProperties();
-        props.read(reader);
-
-        List<String> lines = new ArrayList<>(props.getLines("KeY"));
+    void testProofScript(TestInstance data) throws Exception {
+        var name = data.name();
         Path tmpKey = Files.createTempFile("proofscript_key_" + name, ".key");
-        Files.write(tmpKey, lines);
+        Files.writeString(tmpKey, data.key());
 
         KeYEnvironment<DefaultUserInterfaceControl> env = KeYEnvironment.load(tmpKey);
 
         Proof proof = env.getLoadedProof();
 
-        var script = ParsingFacade.parseScript(props.get("script"));
+        var script = ParsingFacade.parseScript(data.script());
         ProofScriptEngine pse = new ProofScriptEngine(script);
 
+        boolean hasException = data.exception() != null;
         try {
             pse.execute(env.getUi(), proof);
         } catch (ScriptException ex) {
-            assertTrue(props.containsKey("exception"),
+            assertTrue(data.exception != null && !data.exception.isEmpty(),
                 "An exception was not expected, but got " + ex.getMessage());
             // weigl: fix spurious error on Windows machine due to different file endings.
             String msg = ex.getMessage().trim().replaceAll("\r\n", "\n");
-            Assertions.assertTrue(msg.startsWith(props.get("exception").trim()),
+            Assertions.assertTrue(msg.startsWith(data.exception.trim()),
                 "Unexpected exception: " + ex.getMessage() + "\n expected: "
-                    + props.get("exception").trim());
+                    + data.exception.trim());
             return;
         }
 
-        Assertions.assertFalse(props.containsKey("exception"),
+        Assertions.assertFalse(hasException,
             "exception would have been expected");
 
-        ImmutableList<Goal> goals = proof.openGoals();
-        if (props.containsKey("goals")) {
-            int expected = Integer.parseInt(props.get("goals").trim());
+        if (data.goals() != null) {
+            ImmutableList<Goal> goals = proof.openGoals();
+            int expected = data.goals().length;
             Assertions.assertEquals(expected, goals.size());
-        }
 
+            for (String expectedGoal : data.goals()) {
+                assertThat(goals.head().toString().trim()).isEqualTo(expectedGoal);
+                goals = goals.tail();
+            }
 
-        int no = 1;
-        while (props.containsKey("goal " + no)) {
-            String expected = props.get("goal " + no).trim();
-            Assertions.assertEquals(expected, goals.head().toString().trim(), "goal " + no);
-            goals = goals.tail();
-            no++;
-        }
-
-        if (props.containsKey("selected")) {
-            Goal goal = pse.getStateMap().getFirstOpenAutomaticGoal();
-            String expected = props.get("selected").trim();
-            Assertions.assertEquals(expected, goal.toString().trim());
+            if (data.selectedGoal() != null) {
+                Goal goal = pse.getStateMap().getFirstOpenAutomaticGoal();
+                assertThat(goal.toString().trim()).isEqualTo(data.goals()[data.selectedGoal()]);
+            }
         }
     }
 
